--- a/pages/my/product/new/new.wxml
+++ b/pages/my/product/new/new.wxml
@@ -36,10 +36,65 @@
     <text>产品单位：</text>
     <input class="name_input" maxlength="2" placeholder="请输入产品单位" type="text"></input>
   </view>
-  <view class="new_name">
-    <text>产品到期时间：</text>
-    <input class="name_input" maxlength="20" placeholder="" type="text" bindfocus="selectDate"></input>
+  <!-- 产品期限 -->
+  <view class="new_date">
+    <text>请选择产品期限：</text>
+    <view class="date_space"></view>
+    <view class="date_radio">
+      <van-radio-group value="{{ dateType }}" bind:change="onChangeDateType">
+        <view class="date_space"></view>
+        <view class="date_space"></view>
+        <van-radio name="1">长期</van-radio>
+        <view class="date_space"></view>
+        <view class="date_space"></view>
+        <van-radio name="2">
+          <text>产品到期时间：</text>
+          <text>{{dateEndFormat}}</text>
+          <text class="pickdate" bindtap="selectDate">选择日期</text>
+        </van-radio>
+      </van-radio-group>
+    </view>
   </view>
+
+  <!-- 产品标签 -->
+  <view class="new_date">
+    <text>请选择产品标签：</text>
+    <view class="date_space"></view>
+    <view class="tag_list">
+      <checkbox-group bindchange="tagsChange">
+        <label class="checkbox" wx:for="{{tags}}">
+          <checkbox value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+        </label>
+      </checkbox-group>
+    </view>
+  </view>
+
+  <!-- 产品操作方式 -->
+  <view class="new_date">
+    <text>请选择产品交易方式：</text>
+    <view class="date_space"></view>
+    <view class="tag_list">
+      <checkbox-group bindchange="tradeTypeChange">
+        <label class="checkbox" wx:for="{{tradeType}}">
+          <checkbox value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+        </label>
+      </checkbox-group>
+    </view>
+    <text class="waitdes">:更多交易方式敬请期待</text>
+  </view>
+
+  <!-- 注意事项 -->
+  <view class="attention">
+    <text>注意：</text>
+    <text>1.请注意发布的产品图片符合国家法律法规</text>
+    <text>2.请注意发布的产品文字内容符合国家的法律法规</text>
+    <text>如有违反以上两点，平台有权追究产品发布者的相关法律责任。</text>
+  </view>
+
+  <button type="primary">保存</button>
+
+
+
   <van-popup show="{{popShow}}" position="bottom" overlay="{{ true }}" bind:close="onClose">
     <van-datetime-picker
       type="datetime"
