--- a/pages/my/product/new/new.wxss
+++ b/pages/my/product/new/new.wxss
@@ -5,12 +5,13 @@
 .new_name{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 10rpx;
 display: flex;flex-direction: row;align-items: center;margin-bottom: 10rpx;}
 .name_input{border: 1rpx solid silver;}
+
 .new_image{width: 96%;height: 180rpx;margin-left:2%;background-color: gainsboro;
-display: flex;flex-direction: row;align-items: center;}
-.img_ctn{width:20%;height: 160rpx;background-color: white;margin-left: 4%;
 display: flex;flex-direction: column;align-items: center;}
-.img_img{width: 96%;height: 75%;margin-left: 2%;}
-.img_btn{width:100%;height: 25%;text-align: center;font-size: 28rpx;color: blue;text-decoration-line: underline;}
+.img_ctn{width:100%;height: 140rpx;display: flex;flex-direction: row;align-items: center;}
+.img_img{width: 20%;height: 100%;margin-left: 4%;}
+.img_btn{width:100%;height: 20rpx;text-align: center;font-size: 28rpx;color: blue;text-decoration-line: underline;}
+
 .new_des{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 15rpx;}
 .des_input{width: 100%;height: 140rpx;border: 1rpx solid silver;border-radius: 10rpx;}
 .new_date{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 10rpx;
