--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -28,3 +28,4 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .pro_list{width: 100%;height: auto;}
 .plus{font-size: 32rpx;}
 .plus_txt{font-size: 24rpx;color: rgb(116, 116, 116);}
+.t_space{margin: 5rpx;}
