--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -75,6 +75,7 @@
     </view>
     <button class="plus" bindtap="goNew">+</button>
     <text class="plus_txt">点击‘+’号新增产品，最多可以创建18个产品</text>
+    <view class="bottom_space"></view>
   </view>
 
 </view>
