--- a/pages/district/join/business/business.wxss
+++ b/pages/district/join/business/business.wxss
@@ -68,3 +68,4 @@
 .comitbtn{
   margin-top: 10rpx;width: 90%;background-color: green;margin-left: 5%;color: white;
 }
+.info_space{width: 100%;height: 30rpx;}
