--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -29,3 +29,4 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .plus{font-size: 32rpx;}
 .plus_txt{font-size: 24rpx;color: rgb(116, 116, 116);}
 .t_space{margin: 5rpx;}
+.bottom_space{width: 100%;height: 100rpx;}
