--- a/pages/my/product/viewer/viewer.wxss
+++ b/pages/my/product/viewer/viewer.wxss
@@ -1,1 +1,10 @@
 /* pages/my/product/viewer/viewer.wxss */
+.container{width: 100%;height: 100%;}
+.space_line{width: calc(100% - 10rpx);height: 5rpx;background-color: gainsboro;margin-left: 9rpx;margin-top: 10rpx;margin-bottom: 10rpx;}
+.space{width: 100%;height: 15rpx;}
+.shopctn{width: 100%;padding-left: 10rpx;height:50rpx;margin-top:10rpx;display: flex;flex-direction: row;align-items: center;font-size: 32rpx;}
+.shop_icon{width: 40rpx;height:40rpx; }
+.name_ctn{width: 100%;padding-left: 10rpx;height: 40rpx;font-size: 28rpx;display: flex;flex-direction: row;align-items: center;}
+.des_ctn{width: calc(100% - 10rpx);height: auto;font-size: 28rpx;margin-left: 10rpx;display: flex;flex-direction: row;}
+.des_tag{width: 210rpx;}
+.des_value{width: calc(100% - 210rpx);color: gray;}
