--- a/pages/my/product/viewer/viewer.wxss
+++ b/pages/my/product/viewer/viewer.wxss
@@ -8,3 +8,18 @@
 .des_ctn{width: calc(100% - 10rpx);height: auto;font-size: 28rpx;margin-left: 10rpx;display: flex;flex-direction: row;}
 .des_tag{width: 210rpx;}
 .des_value{width: calc(100% - 210rpx);color: gray;}
+.img_ctn{width: 100%;height: 300rpx;}
+.img_swiper{width: 100%;height: 100%;}
+.img_item{width: 100%;height: 100%;}
+.img_img{width: 100%;height: 300rpx;}
+.order_ctn{width: calc(100% - 10rpx); height: auto;margin-left: 9rpx;font-size: 28rpx;}
+.order_detail_btn{color: blue;text-decoration-line: underline;}
+.order_cancel_btn{color: blue;text-decoration-line: underline;margin-left: 10rpx;}
+.order_list{width: 100%;height: auto;font-size: 24rpx;}
+.list_item{width: 100%;height: 30rpx;display: flex;flex-direction: row;align-items: center;}
+.item_name{width: 25%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
+.item_tel{width:30%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
+.item_count{width: 15%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
+.item_date{width: 30%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
+
+
