--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -71,7 +71,7 @@
             <view slot="footer">
               <van-button size="mini" class="t_space">做广告</van-button>
               <van-button size="mini" class="t_space">上架</van-button>
-              <van-button size="mini" class="t_space" bindtap="proEdit" data-id="{{item.ID}}">编辑</van-button>
+              <van-button size="mini" class="t_space" catchtap="proEdit" data-id="{{item.ID}}">编辑</van-button>
             </view>
           </van-card>
         </block>
