--- a/pages/my/product/edit/edit.wxss
+++ b/pages/my/product/edit/edit.wxss
@@ -9,7 +9,7 @@ display: flex;flex-direction: row;align-items: center;margin-bottom: 10rpx;}
 .new_image{width: 96%;height: 180rpx;margin-left:2%;background-color: gainsboro;
 display: flex;flex-direction: column;align-items: center;}
 .img_ctn{width:100%;height: 140rpx;display: flex;flex-direction: row;align-items: center;}
-.img_img{width: 20%;height: 100%;margin-left: 4%;}
+.img_img{width: 20%;height: calc(100% - 10rpx);margin-left: 4%;margin-top: 5rpx;}
 .img_btn{width:100%;height: 20rpx;text-align: center;font-size: 28rpx;color: blue;text-decoration-line: underline;}
 
 .new_des{width: 96%;margin-left: 2%;height: auto;font-size: 28rpx;margin-top: 15rpx;}
