--- a/pages/ad/text/text.wxss
+++ b/pages/ad/text/text.wxss
@@ -1,1 +1,16 @@
 /* pages/ad/text/text.wxss */
+.container{width: 96%;margin-left: 2%;height: auto;}
+.fullwh{width: 100%;height: 100%;}
+.hspace{width: 100%;height: 10rpx;}
+.space_line{width: 100%;height: 2rpx;background-color: silver;margin-top: 10rpx;margin-bottom: 10rpx;}
+.preview_ctn{display: flex;flex-direction: column;margin-top: 20rpx;}
+.preview_ctn text{font-size: 36rpx;width: 100%;}
+.preview_ctn swiper{width:100%;height:80rpx;}
+.product_info{font-size: 28rpx;}
+.text_ctn{display: flex;flex-direction: row;}
+.text_tag{width: 230rpx;}
+.text_content{width: calc(100% - 230rpx);height: auto;color: rgb(100, 99, 99);}
+.ad_info{font-size: 28rpx;}
+.ad_info text{font-size: 36rpx;}
+.ad_info input{border:1rpx solid silver;}
+.ad_date{font-size: 36rpx;}
