--- a/pages/ad/image/image.wxss
+++ b/pages/ad/image/image.wxss
@@ -1,1 +1,31 @@
 /* pages/ad/image/image.wxss */
+.container{width: 96%;margin-left: 2%;height: auto;}
+.fullwh{width: 100%;height: 100%;}
+.hspace{width: 100%;height: 10rpx;}
+.space_line{width: 100%;height: 2rpx;background-color: silver;margin-top: 10rpx;margin-bottom: 10rpx;}
+.preview_ctn{display: flex;flex-direction: column;margin-top: 20rpx;}
+.preview_ctn text{font-size: 36rpx;width: 100%;}
+.preview_ctn swiper{width:100%;height:320rpx;}
+.product_info{font-size: 28rpx;}
+.text_ctn{display: flex;flex-direction: row;}
+.text_tag{width: 230rpx;}
+.text_content{width: calc(100% - 230rpx);height: auto;color: rgb(100, 99, 99);}
+.ad_info{font-size: 28rpx;}
+.radio-group{display: flex;flex-direction: row;}
+.radio{height: 100rpx;}
+.radio image{height: 100rpx;width: 100rpx;}
+.ad_info textarea{height: 120rpx;width:100%;border: 1rpx solid silver;padding: 5rpx;}
+.ad_date{font-size: 36rpx;}
+.vspace{width: 20rpx;height: 100%;}
+.date_circle{font-size: 28rpx;color: red;}
+.list_item{font-size: 28rpx;display: flex;flex-direction: row;align-items: center;}
+.list_item .text_ctn{width:calc(100% - 200rpx);}
+.text_time{width: 40%;} 
+.text_price{width: 30%;text-align: right;}
+.text_left{width: 30%;text-align: right;}
+.list_item van-stepper{width: 200rpx;}
+.price_total{color: green;}
+.swiper_img_item {height: 100%;align-items: center;display: flex;flex-direction: column;}
+.swiper_img {width:100%;height: 100%;}
+.swiper_img_txtbg{width: 100%;height: 100rpx;background-color: black;opacity: 0.3;position: absolute;margin-top: 220rpx;}
+.swiper_img_txt{width: 100%;height: 100rpx;color:white;position: absolute;margin-top: 220rpx;font-size: 24rpx!important;}
