--- a/pages/district/join/person/person.wxss
+++ b/pages/district/join/person/person.wxss
@@ -1,6 +1,6 @@
 /* pages/district/join/person/person.wxss */
 .container {
-  width: 100%;height: 100%;
+  width: 100%;height: 100%;overflow: hidden;
   display: flex;flex-direction: column;align-items: center;
 }
 
@@ -53,18 +53,18 @@
   width: 100%;height: auto;display: flex;flex-direction: column;
   padding-left: 40rpx;
 }
-.info_opmsg{
-  font-size: 28rpx;height:auto;width:100%;
-}
-.info_imginfo{
-  font-size: 28rpx;height: auto;width:100%;padding-left: 30rpx;
-}
-.info_imginfo .uploadtxt{
-  text-decoration-line: underline;color: blue;
-}
-.myimg{
-  width: 100%;height: 200rpx;
-}
-.comitbtn{
-  margin-top: 10rpx;width: 90%;background-color: green;margin-left: 5%;color: white;
-}
+.info_opmsg{font-size: 28rpx;height:auto;width:100%;}
+.info_item{display: flex;flex-direction: row;align-items: center;}
+.info_star{width: 10rpx;color:red;}
+.info_tag{width: 140rpx;}
+.info_item input{width: calc(100% - 150rpx);}
+.info_item textarea{width: calc(100% - 150rpx);height: 100rpx;}
+
+.info_imginfo{font-size: 28rpx;height: auto;width:100%;}
+.info_imginfo .uploadtxt{text-decoration-line: underline;color: blue;}
+.myimg{width: 100%;height: 200rpx;}
+
+.comitbtn{margin-top: 10rpx;width: 90%;background-color: green;margin-left: 5%;color: white;}
+.info_space{width: 100%;height: 30rpx;}
+.line_space{width: 100%;height: 2rpx;background-color: silver;margin-top: 15rpx;margin-bottom: 15rpx;}
+.tips{font-size: 28rpx;color: silver;padding-left: 40rpx;padding-right: 40rpx;}
