--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -26,7 +26,7 @@
 .ad_info{width: 100%;height: 55rpx;font-size: 28rpx;
 display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: gainsboro;}
 .ad_count{width: calc(100% - 120rpx);}
-.ad_btn{width:120rpx;text-align: right;}
+.ad_btn{width:120rpx;text-align: right;color:blue;text-decoration-line: underline;}
 
 .products{width: 100%;height: auto;}
 .pro_info{width:100%;height: auto;display: flex;flex-direction: column;}
