--- a/pages/admin/index.wxss
+++ b/pages/admin/index.wxss
@@ -1,1 +1,17 @@
 /* pages/admin/index.wxss */
+.container{width: 96%;margin-left: 2%;height: auto;}
+.welcom{width: 100%;height: auto;display: flex;flex-direction: row;margin-top: 20rpx;}
+.welcom .title{font-size: 36rpx;width: 50%;height: 100%;}
+.welcom .name{font-size: 28rpx;width: 50%;height: 100%;padding-top: 8rpx;text-align: right;}
+.line{width: 100%;height: 2rpx;background-color: silver;margin-top: 5rpx;margin-bottom: 10rpx;}
+
+.main_ctn{width: 96%;margin-left: 2%;height: 100%;display: flex;flex-direction: column;border: 4rpx solid white;border-left-color: silver;}
+
+.sum{width: 92%;margin-left: 6%;height: 200rpx;background-color: green;display: flex;flex-direction: column;align-items: center;color: white;}
+.sum .ssq{font-size: 36rpx;margin-top: 30rpx;}
+.sum .des{font-size: 24rpx;margin-top: 10rpx;}
+
+.item_ctn{width: 100%;height: auto;display: flex;flex-direction: row;align-items: center;margin-top: 30rpx;margin-bottom: 30rpx;}
+.short_line{width: 150rpx;height: 4rpx;background-color: silver;}
+.item_text{font-size: 32rpx;margin-left: 10rpx;}
+.count{color: red;}
