--- a/pages/admin/audit/index.wxml
+++ b/pages/admin/audit/index.wxml
@@ -1,2 +1,91 @@
 <!--pages/admin/audit/index.wxml-->
-<text>管理 - 审核</text>
+<view class="container">
+
+  <view class="welcom">
+    <text class="title">SSQ管理后台--审核</text>
+    <text class="name">欢迎：{{nickName}}</text>
+  </view>
+  <view class="line"></view>
+
+  <view class="main_ctn">
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">新建社圈审核(</text>
+        <text class="item_text count">{{count}}</text>
+        <text class="item_text">)</text>
+      </view>
+      <view class="item_list">
+        <scroll-view scroll-y="true">
+          <block wx:for="{{newSsqList}}" wx:for-index="index">
+          <view class="item_item">
+            <text class="tag">新申请：</text>
+            <text class="name">{{item.area}}{{item.name}}社圈</text>
+            <text class="btn">去处理</text>
+          </view>
+          </block>
+        </scroll-view>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">商家入驻审核(</text>
+        <text class="item_text count">{{count}}</text>
+        <text class="item_text">)</text>
+      </view>
+      <view class="item_list">
+        <scroll-view scroll-y="true">
+          <block wx:for="{{newSsqList}}" wx:for-index="index">
+          <view class="item_item">
+            <text class="tag">新申请：</text>
+            <text class="name">{{item.area}}{{item.name}}社圈</text>
+            <text class="btn">去处理</text>
+          </view>
+          </block>
+        </scroll-view>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">个人入驻审核(</text>
+        <text class="item_text count">{{count}}</text>
+        <text class="item_text">)</text>
+      </view>
+      <view class="item_list">
+        <scroll-view scroll-y="true">
+          <block wx:for="{{newSsqList}}" wx:for-index="index">
+          <view class="item_item">
+            <text class="tag">新申请：</text>
+            <text class="name">{{item.area}}{{item.name}}社圈</text>
+            <text class="btn">去处理</text>
+          </view>
+          </block>
+        </scroll-view>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">社圈改图审核(</text>
+        <text class="item_text count">{{count}}</text>
+        <text class="item_text">)</text>
+      </view>
+      <view class="item_list">
+        <scroll-view scroll-y="true">
+          <block wx:for="{{newSsqList}}" wx:for-index="index">
+          <view class="item_item">
+            <text class="tag">新申请：</text>
+            <text class="name">{{item.area}}{{item.name}}社圈</text>
+            <text class="btn">去处理</text>
+          </view>
+          </block>
+        </scroll-view>
+      </view>
+    </view>
+
+  </view>
+
+</view>
+
