社圈申请审核

--- a/pages/admin/audit/ssqapply/ssqapply.wxml
+++ b/pages/admin/audit/ssqapply/ssqapply.wxml
@@ -1,2 +1,64 @@
 <!--pages/admin/audit/ssqapply/ssqapply.wxml-->
-<text>pages/admin/audit/ssqapply/ssqapply.wxml</text>
+<view class="container">
+
+  <view class="welcom">
+    <text class="title">SSQ管理后台--新社圈</text>
+    <text class="name">欢迎：{{nickName}}</text>
+  </view>
+  <view class="line"></view>
+
+  <view class="main_ctn">
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">名字：{{applySsqInfo.name}}社圈</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">区域：{{applySsqInfo.area}}</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">申请者：{{applySsqInfo.creator.nickName}}</text>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">社区图:</text>
+      </view>
+      <view class="item_img">
+        <image src="{{applySsqInfo.image}}" mode="aspectFit"></image>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">所在位置：</text>
+        <image src="../../../../static/icons/map_r.png" mode="aspectFit" bindtap="openMap"></image>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <text class="item_text">审核意见：</text>
+      </view>
+      <view class="item_msg">
+        <textarea></textarea>
+      </view>
+    </view>
+    <view class="item_ctn">
+      <view class="item_title">
+        <view class="short_line"></view>
+        <button type="warn">驳回</button>
+        <button type="primary">通过</button>
+      </view>
+    </view>
+
+  </view>
+
+</view>
