--- a/pages/admin/audit/ssqapply/ssqapply.wxss
+++ b/pages/admin/audit/ssqapply/ssqapply.wxss
@@ -17,3 +17,7 @@
 .item_msg{width: 92%;margin-left: 4%;height: auto;}
 .item_msg textarea{width: 100%;height: 120rpx;border: 1rpx solid silver;border-radius: 10rpx;padding: 5rpx;}
 .item_title button{margin-top: 20rpx;}
+.list_ctn{width: 96%;margin-left: 2%;height: auto;}
+.short_space{width: 50rpx;height: 4rpx;}
+.ssqinfo{margin-top: 15rpx;}
+
