--- a/pages/admin/audit/index.wxml
+++ b/pages/admin/audit/index.wxml
@@ -40,7 +40,7 @@
           <view class="item_item">
             <text class="tag">新申请：</text>
             <text class="name">{{item.area}}{{item.name}}社圈</text>
-            <text class="btn">去处理</text>
+            <text class="btn" bindtap="delBusApply">去处理</text>
           </view>
           </block>
         </scroll-view>
