用户管理页面

--- a/pages/admin/index.wxml
+++ b/pages/admin/index.wxml
@@ -19,7 +19,7 @@
       <text class="item_text count">{{count}}</text>
       <text class="item_text">)</text>
     </view>
-    <view class="item_ctn">
+    <view class="item_ctn" bindtap="goUsers">
       <view class="short_line"></view>
       <text class="item_text">用户管理</text>
     </view>
