--- a/pages/admin/index.wxml
+++ b/pages/admin/index.wxml
@@ -27,7 +27,7 @@
       <view class="short_line"></view>
       <text class="item_text">社圈管理</text>
     </view>
-    <view class="item_ctn">
+    <view class="item_ctn"  bindtap="goPublish">
       <view class="short_line"></view>
       <text class="item_text">公告管理</text>
     </view>
